correction application ok

--- a/main.tex
+++ b/main.tex
@@ -1096,12 +1096,12 @@ description={An integral multiple of the derived rf frequency, which is the divi
 }
 
 \newglossaryentry{glos:accuracy}{
-name={accuracy of the start of the synchronization window},
+name={accuracy of the start\\ of the synchronization window},
 description={Time closeness of agreement between the observed and the best estimate start of the synchronization window, which is the sum of the precision and trueness}
 }
 
 \newglossaryentry{glos:precision}{
-name={precision of the start of the synchronization window},
+name={precision of the start\\ of the synchronization window},
 description={Time closeness of agreement between the actual start of the synchronization window of different timing notes}
 }
 \newglossaryentry{glos:bucket_label}{
@@ -1111,7 +1111,7 @@ description={Time indication of a dedicated bucket passing on the virtual rf cav
 
 
 \newglossaryentry{glos:trueness}{
-name={trueness of the start of the synchronization window},
+name={trueness of the start\\ of the synchronization window},
 description={Time closeness of agreement between the average actual start of the synchronization window of different timing notes and the best estimate start of the synchronization window}
 }
 \newglossaryentry{glos:frame_loss_rate}{
