--- a/main.tex
+++ b/main.tex
@@ -63,7 +63,7 @@ sort=symbolpi, type=symbolslist
 %sort=symbolpi, type=symbolslist
 %}
 \newglossaryentry{symb:voltage}{
-name=$V$,
+name=$u$,
 description={Longitudinal accelerating voltage at rf cavity},
 sort=symbolpi, type=symbolslist
 }
