--- a/main.tex
+++ b/main.tex
@@ -529,7 +529,7 @@ sort=symbollambda, type=B2B_sym_slist
 }
 \newglossaryentry{symb:phase_shift_actual}{
 name=$f_{actual}$ ,
-description={Actual rf freqnecy modulation profile, calculated by PSM},
+description={Actual rf frequency modulation profile, calculated by PSM},
 sort=symbollambda, type=B2B_sym_slist
 } 
 \newglossaryentry{symb:phase_shift_normalized}{
@@ -1398,7 +1398,7 @@ I would like to dedicate this dissertation to my dear parents,\\ loving husband 
 
 %\chapter{References}
 %\input{chapters/References}
-\appendix
+freqnecy \appendix
 \chapter{B2B transfer related timing frames}
 \input{chapters/appendixA}
 \chapter{Transfer of timing frames for the B2B transfer system}
