realization: WR &beam dynamic rework done

--- a/main.tex
+++ b/main.tex
@@ -620,8 +620,8 @@ description={Timestamp corresponding to the extrapolated phase advance $\psi^X$}
 sort=symbollambda, type=B2B_sym_slist
 }
 \newglossaryentry{symb:initial_phase advance}{
-name=$\psi_0^X$,
-description={Initial phase advance in a linear relationship between the phase advance and time},
+name=$\psi_0$,
+description={Initial phase advance in a linear relationship between the phase advance and time of the target synchrotron},
 sort=symbollambda, type=B2B_sym_slist
 }
 
