--- a/main.tex
+++ b/main.tex
@@ -176,7 +176,7 @@ description={Bucket area factor},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:an_freq_syn}{
-name=$\omega_{\mathit{syn}}$,
+name=$\omega_s$,
 description={Angular synchrotron frequency},
 sort=symbollambda, type=symbolslist
 }
@@ -198,17 +198,17 @@ sort=symbollambda, type=symbolslist
 }
 
 \newglossaryentry{symb:chromaticity_x}{
-name=$Q^`_x$,
+name=$Q^\prime_x$,
 description={Horizontal chromaticity},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:chromaticity_y}{
-name=$Q^`_y$,
+name=$Q^\prime_y$,
 description={Vertical chromaticity},
 sort=symbollambda, type=symbolslist
 }
 \newglossaryentry{symb:chromaticity_x_y}{
-name=$Q^`_{\mathit{x/y}}$,
+name=$Q^\prime_{\mathit{x/y}}$,
 description={Horizontal/vertical chromaticity},
 sort=symbollambda, type=symbolslist
 }
@@ -382,6 +382,21 @@ sort=symbolpi, type=B2B_sym_slist
 \newglossaryentry{symb:pha_shift}{
 name=$\Delta \phi$,
 description={Required phase shift for the phase shift method. Bunch-to-bucket injection center mismatch for the frequency beating method},
+sort=symbolpi, type=B2B_sym_slist
+}
+\newglossaryentry{symb:pha_shift_rf}{
+name=$\Delta \phi_\mathit{rf}$,
+description={Phase difference between two cavity rf frequencies},
+sort=symbolpi, type=B2B_sym_slist
+}
+\newglossaryentry{symb:pha_shift_syn}{
+name=$\Delta \phi_\mathit{syn}$,
+description={Phase difference between two synchronization frequencies},
+sort=symbolpi, type=B2B_sym_slist
+}
+\newglossaryentry{symb:pha_step}{
+name=$\Delta \phi_\mathit{step}$,
+description={Arithmetic increasing phase of the phase difference between two cavity rf frequencies for the frequency beating},
 sort=symbolpi, type=B2B_sym_slist
 }
 \newglossaryentry{symb:freq_modulation}{
@@ -589,7 +604,7 @@ description={Mismatch between the bunch and bucket center},
 sort=symbollambda, type=B2B_sym_slist
 }
 \newglossaryentry{symb:syn_win_length}{
-name=$T_{\mathit{sync\_win}}$,
+name=$T_{w}$,
 description={Length of the synchronization window},
 sort=symbollambda, type=B2B_sym_slist
 }
@@ -1388,7 +1403,7 @@ I would like to dedicate this dissertation to my dear parents,\\ loving husband 
 \input{chapters/4Concept}
 \chapter{Application of the FAIR B2B transfer system for FAIR accelerators}\label{application}
 \input{chapters/Application}
-\chapter{Realization and systematic investigation of the FAIR B2B transfer system}
+\chapter{Realization and systematic investigation of the FAIR B2B transfer system}\label{realization}
 \input{chapters/5Realization}
 %\chapter{Existing transfer system and the transfer system of the FAIR accelerators}
 %\input{chapters/6Existing}
