concept: B2B Ref Sig

--- a/main.tex
+++ b/main.tex
@@ -386,12 +386,12 @@ sort=symbolpi, type=B2B_sym_slist
 }
 \newglossaryentry{symb:pha_shift_rf}{
 name=$\Delta \phi_\mathit{rf}$,
-description={Phase difference between two cavity rf frequencies},
+description={Required phase difference between two cavity rf frequencies for the phase shift method, Bunch-to-bucket injection center mismatch within the synchronization window for the frequency beating method},
 sort=symbolpi, type=B2B_sym_slist
 }
 \newglossaryentry{symb:pha_shift_syn}{
 name=$\Delta \phi_\mathit{syn}$,
-description={Phase difference between two synchronization frequencies},
+description={Required phase difference between two synchronization frequencies for the phase shift method, phase mismatch  between two synchronization frequencies within the synchronization window for the frequency beating method},
 sort=symbolpi, type=B2B_sym_slist
 }
 \newglossaryentry{symb:pha_step}{
@@ -400,8 +400,13 @@ description={Arithmetic increasing phase of the phase difference between two cav
 sort=symbolpi, type=B2B_sym_slist
 }
 \newglossaryentry{symb:freq_modulation}{
-name=$\Delta f_{rf}$,
-description={Rf frequency modulation for the phase shift method},
+name=$\Delta f_\mathit{rf}$,
+description={Rf frequency modulation on the cavity rf frequency for the phase shift method, rf frequency detune on the cavity rf frequency for the frequency beating method},
+sort=symbolpi, type=B2B_sym_slist
+}
+\newglossaryentry{symb:freq_modulation1}{
+name=$\Delta f_\mathit{syn}$,
+description={Rf frequency modulation on the synchronization frequency for the phase shift method, rf frequency detune on the synchronization frequency for the frequency beating method},
 sort=symbolpi, type=B2B_sym_slist
 }
 \newglossaryentry{symb:period_phase}{
